Correction Responsive + Ajout footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div></div> <!-- Spacer -->
             <div class="header-content">
-                <h1>Loutik<span>PROJETS</span></h1>
+                <h1>Loutik<span class="span-project">PROJETS</span></h1>
                 <hr>
             </div>
              <div class="arrow-container">
@@ -30,7 +30,7 @@
         </header>
 
         <!-- Finish project section -->
-        <section id="finish-project" class="title-h2">
+        <section id="finish-project">
             <div class="title-container">
                 <div>
                     <hr class="title-hr">
@@ -53,13 +53,13 @@
                 <div class="project-item">
                     <img src="img/illustrations/project-wiki-loutik.png" alt="capture d'écran du projet WIKI loutik">
                     <h3>WIKI LOUTIK</h3>
-                    <p>LCDCI est une communauté dynamique et conviviale dédiée aux passionnés d'informatique et de technologie.</p>
+                    <p>WIKI Loutik est un site qui me permet de partager mes connaissances et mes découvertes sur divers sujets liés à l'informatique.</p>
                     <a href="https://wiki.loutik.fr" target="_blank">En savoir plus</a>
                 </div>
             </div>
         </section>
 
-        <!-- in progress project -->
+        <!-- in progress project section -->
         <section>
             <div class="title-container">
                 <div>
@@ -74,22 +74,40 @@
             </div>
             <div class="project-container">
                 <div class="project-item">
-                    <img src="img/illustrations/project-lcdci.png" alt="capture d'écran du projet LCDCI">
-                    <h3>LCDCI</h3>
-                    <p>LCDCI est une communauté dynamique et conviviale dédiée aux passionnés d'informatique et de technologie.</p>
+                    <img src="img/illustrations/project-bot-eliott.png" alt="Photo de profil BOT Eliott">
+                    <h3>BOT Eliott</h3>
+                    <p>BOT Eliott est un robot discord qui va permettre d'automatiser certaines tâches (modération, gestion des membres, etc.) et d'afficher les status en temps réel des services <strong>Loutik<span class="span-project">CLOUD</span>.</strong></p>
                     <h4 class="title-progress">Progression :</h4>
-                    <progress max="100" value="50">50%</progress>
+                    <progress max="100" value="0">0%</progress>
                 </div>
                 <div class="project-item">
-                    <img src="img/illustrations/project-wiki-loutik.png" alt="capture d'écran du projet WIKI loutik">
-                    <h3>WIKI LOUTIK</h3>
-                    <p>LCDCI est une communauté dynamique et conviviale dédiée aux passionnés d'informatique et de technologie.</p>
+                    <img src="img/illustrations/project-loutik-convert.png" alt="Capture d'écran du projet LoutikCONVERT">
+                    <h3>LoutikCONVERT</h3>
+                    <p>LoutikCONVERT est un outil de conversion de fichiers en ligne, simple et rapide, en opensource.</p>
                     <h4 class="title-progress">Progression :</h4>
                     <progress max="100" value="0">0%</progress>
                 </div>
             </div>
-
         </section>
+
+        <!-- footer section -->
+        <footer>
+            <div class="footer-top">
+                <h3>Loutik<span class="span-project">PROJETS</span></h3>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/louismedo/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/firetoak" target="_blank">GitHub</a></li>
+                    <li><a href="https://discord.gg/yqQJhYM9tK" target="_blank">Discord</a></li>
+                    <li><a href="https://www.tiktok.com/@firetoak" target="_blank">TikTok</a></li>
+                    <li><a href="https://www.youtube.com/@firetoak" target="_blank">YouTube</a></li>
+                </ul>
+            </div>
+            <hr>
+            <div class="footer-bottom">
+                <p>Développé par MEDO/Louis avec 🐢</p>
+                <p>&copy; 2025 Loutik. Tous droits réservés.</p>
+            </div>
+        </footer>
 
     </body>
 </html>
