Ajouts & Modifications | Version 1.0.0

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 
         <!-- Header -->
         <header>
-            <div class="message-top">
-                <p>👀 Vous regardez actuellement une version <strong>beta</strong>. |<a href="https://github.com/FireToak" target="_blank">Github</a></p>
-            </div>
             <div></div> <!-- Spacer -->
             <div class="header-content">
                 <h1>Loutik<span class="span-project">PROJETS</span></h1>
@@ -48,13 +45,13 @@
                     <img src="img/illustrations/project-lcdci.png" alt="capture d'écran du projet LCDCI">
                     <h3>LCDCI</h3>
                     <p>LCDCI est une communauté dynamique et conviviale dédiée aux passionnés d'informatique et de technologie.</p>
-                    <a href="https://lcdci.loutik.fr" target="_blank">En savoir plus</a>
+                    <a href="https://lcdci.loutik.fr" target="_blank">➠ En savoir plus</a>
                 </div>
                 <div class="project-item">
                     <img src="img/illustrations/project-wiki-loutik.png" alt="capture d'écran du projet WIKI loutik">
                     <h3>WIKI LOUTIK</h3>
                     <p>WIKI Loutik est un site qui me permet de partager mes connaissances et mes découvertes sur divers sujets liés à l'informatique.</p>
-                    <a href="https://wiki.loutik.fr" target="_blank">En savoir plus</a>
+                    <a href="https://wiki.loutik.fr" target="_blank">➠ En savoir plus</a>
                 </div>
             </div>
         </section>
@@ -74,18 +71,18 @@
             </div>
             <div class="project-container">
                 <div class="project-item">
-                    <img src="img/illustrations/project-bot-eliott.png" alt="Photo de profil BOT Eliott">
+                    <img src="img/illustrations/project-eliott-bot.png" alt="Photo de profil BOT Eliott">
                     <h3>BOT Eliott</h3>
                     <p>BOT Eliott est un robot discord qui va permettre d'automatiser certaines tâches (modération, gestion des membres, etc.) et d'afficher les status en temps réel des services <strong>Loutik<span class="span-project">CLOUD</span>.</strong></p>
                     <h4 class="title-progress">Progression :</h4>
                     <progress max="100" value="0">0%</progress>
                 </div>
                 <div class="project-item">
-                    <img src="img/illustrations/project-loutik-convert.png" alt="Capture d'écran du projet LoutikCONVERT">
+                    <img src="img/illustrations/project-convert-loutik.png" alt="Capture d'écran du projet LoutikCONVERT">
                     <h3>LoutikCONVERT</h3>
                     <p>LoutikCONVERT est un outil de conversion de fichiers en ligne, simple et rapide, en opensource.</p>
-                    <h4 class="title-progress">Progression :</h4>
-                    <progress max="100" value="0">0%</progress>
+                        <h4 class="title-progress">Progression :</h4>
+                        <progress max="100" value="0">0%</progress>
                 </div>
             </div>
         </section>
@@ -106,6 +103,10 @@
             <div class="footer-bottom">
                 <p>Développé par MEDO/Louis avec 🐢</p>
                 <p>&copy; 2025 Loutik. Tous droits réservés.</p>
+                <div>
+                    <hr>
+                </div>
+                <p>Version : 1.0.0 (<a href="https://github.com/firetoak/projects" target="_blank">GitHub Repository</a>)</p>
             </div>
         </footer>
 
